Fixed profile picute alignment. Sorted styles for .profile-pic

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,13 +36,23 @@ body {
 }
 
 /* Profile Image */
+.profile-pic-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  /* slightly "Nudge" the picture to the left
+   since it visually appears to not be centered.
+   However programatically it is perfectly centered */
+  transform: translateX(-4px);
+}
+
 .profile-pic {
+  display: block;
   width: 120px;
   height: 120px;
-  border-radius: 50%;
-  border: 4px solid #f1c40f;
   object-fit: cover;
-  margin-bottom: 20px;
+  border: 4px solid #f1c40f;
+  border-radius: 50%;
 }
 
 /* Headings */
